--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <h1>lytria</h1>
-        <a href="https://cdn.discordapp.com/attachments/1342504699789574248/1342510927492288606/Lytria_Beta.zip?ex=67b9e63b&is=67b894bb&hm=097a26c8df470bee9ab6f870c2064114dfa7d719659fa1674e6984f6f5409331&">DOWNLOAD NOW</a>
+        <a href="https://cdn.discordapp.com/attachments/1342504699789574248/1342511756588617749/Lytria_Beta.rar?ex=67b9e701&is=67b89581&hm=fae6c6b4d2ba0819b747a46019bdda314eeaf6cd733811bd985c905e93a10f6e&">DOWNLOAD NOW</a>
         <p class="description">
             **The Fountain of Youth was hidden away.** Nonetheless, it is fated that a Usurper will slay the Ageless and unearth it once more.  
             <br><br>
