--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <h1>lytria</h1>
-        <a href="https://www.dropbox.com/scl/fi/sit6nvvmy5t6wuy9nc2gl/Lytria-Setup-1.0.0.zip?rlkey=oofi1p3ffsy17x6yp29a4oe33&st=v08vm6gr&dl=1">DOWNLOAD NOW</a>
+        <a href="https://www.dropbox.com/scl/fi/p2u5cw3cis7mmus7hsz7e/Lytria-Setup-1.0.0.zip?rlkey=xhil23sscrm5qpse2jqyh4wl0&st=oobvqjf9&dl=1">DOWNLOAD NOW</a>
         <p class="description">
             **The Fountain of Youth was hidden away.** Nonetheless, it is fated that a Usurper will slay the Ageless and unearth it once more.  
             <br><br>
